--- a/lib/live_view_deployer_web/templates/page/index.html.leex
+++ b/lib/live_view_deployer_web/templates/page/index.html.leex
@@ -1,5 +1,8 @@
 <div class="">
   <div>
-    <%= @deploy_step %>
+    <div>
+      <button phx-click="github_deploy">Deploy to GitHub</button>
+    </div>
+    Status: <%= @deploy_step %>
   </div>
 </div>
